--- a/bibliotecas-gui/sdl/CMakeLists.txt
+++ b/bibliotecas-gui/sdl/CMakeLists.txt
@@ -1,19 +1,21 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(qt-sdl)
+project(sdl)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 add_library(sdldemo
-  src/Area.cpp
-  src/SdlTexture.cpp
-  src/SdlException.cpp
-  src/SdlWindow.cpp
+  libs/Area.cpp
+  libs/Animation.cpp
+  libs/Exception.cpp
+  libs/SdlTexture.cpp
+  libs/SdlException.cpp
+  libs/SdlWindow.cpp
 )
 
 # Agrego la carpeta con los headers autogenerados a los includes
-message("Agregando '${PROJECT_BINARY_DIR}' como directorio de includes")
-include_directories(${PROJECT_BINARY_DIR})
+message("Agregando '${PROJECT_SOURCE_DIR}/libs' como directorio de includes")
+include_directories(${PROJECT_SOURCE_DIR}/libs)
 
 add_executable (sdl-hello
   src/mainSdlHello.cpp  
@@ -23,8 +25,13 @@ add_executable (sdl-events
   src/mainSdlEvents.cpp
 )
 
+add_executable (sdl-alpha-blending
+  src/mainSdlAlphaBlending.cpp
+)
+
 
 target_link_libraries(sdl-hello sdldemo SDL2 SDL2_image)
 target_link_libraries(sdl-events sdldemo SDL2 SDL2_image)
+target_link_libraries(sdl-alpha-blending sdldemo SDL2 SDL2_image)
 
-install(FILES assets/cat.gif DESTINATION ${CMAKE_BINARY_DIR})
+file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
